--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ListaDeContatos" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Jukenpo" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
-
-    <style name="Theme.ListaDeContatos" parent="Base.Theme.ListaDeContatos" />
-</resources>
+        </style>
+        <style name="Theme.Jukenpo" parent="Base.Theme.Jukenpo" />
+ </resources>
